# fileshare

./: .gitignore  Cargo.toml  README.md
src/: main.rs
static/: index.css  index.html  index.js
