[package]
name = "fileshare"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause"
description = "A file sharing server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["headers"] }
serde_json = "1.0.108"
serde = { version = "1.0.108", features = ["derive"] }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
axum-macros = "0.3.8"
tower = "0.4.4"
tower-http = { version = "0.4.4", features = ["cors"] }
async-fs = "2.1.0"
base64 = "0.21.5"
